# websocket-logger

./: .dockerignore  .gitignore  Dockerfile  build_image.sh  log.py  main.py  pyproject.toml  run_docker.sh
app/: factories.py  utils.py
app/api/: api.py
app/api/enpoints/: driver.py  transit.py
app/api/utils/: RideSimulator.py  crud_utils.py  endoint_utils.py  ride_simulator.py
app/core/: config.py  middleware.py
app/core/ws/: __init__.py  connection_manager.py
app/db/: database.py  factories.py  file_index.py  init_db.py  loader.py
app/db/sources/: bus-stops.json  buses.json  cities.json  places.json  trips.json
app/db/sources/trips/: geometries.json  trips.json  vehicles.json
app/schemas/: bus.py  city.py  contact_email.py  database.py  geojson.py  quay.py  ride.py  route.py  trip.py  vehicle.py
app/schemas/common/: base.py
