[tool.poetry]
name = "websocket-server"
version = "0.1.0"
description = ""
authors = ["Jacek Byczkiewicz <jacek.byczkiewicz@enrouteq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
loguru = "^0.6.0"
websockets = "10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
